--- a/bep-nuong-am-ban/thi-cong-va-lap-dat-bep-nuong-am-ban.html
+++ b/bep-nuong-am-ban/thi-cong-va-lap-dat-bep-nuong-am-ban.html
@@ -298,7 +298,7 @@
             </a></li>
           <li style="text-align: left;"><a href="thiet-ket-bep-nuong-am-ban.html">Thiết
               kế bếp nướng âm bàn</a></li>
-          <li style="text-align: left;"><a href="thi-cong-va-lap-dat-bep-nuong-am-ban">Thi
+          <li style="text-align: left;"><a href="thi-cong-va-lap-dat-bep-nuong-am-ban.html">Thi
               công và lắp đặt bếp nướng âm bàn<br>
             </a></li>
         </ul>
