--- a/bep-nuong-am-ban/bep-nuong-dien-am-ban.html
+++ b/bep-nuong-am-ban/bep-nuong-dien-am-ban.html
@@ -59,8 +59,7 @@
                   Chủ</a> </li>
               <li class="nav-item"> <a class="nav-link" href="about.html">Giới
                   Thiệu</a> </li>
-              <li class="nav-item"> <a class="nav-link" href="shop.html">Cửa
-                  Hàng</a> </li>
+              <li class="nav-item"> <a class="nav-link" href="#">Cửa Hàng</a> </li>
               <li class="nav-item"> <a class="nav-link" href="contact.html">Liên
                   Hệ</a> </li>
               <li class="nav-item"> <a class="nav-link" href="#">Blog</a> </li>
