--- a/bep-nuong-am-ban/cach-ve-sinh-va-bao-quan-bep-nuong-am-ban.html
+++ b/bep-nuong-am-ban/cach-ve-sinh-va-bao-quan-bep-nuong-am-ban.html
@@ -70,8 +70,7 @@
                   Chủ</a> </li>
               <li class="nav-item"> <a class="nav-link" href="about.html">Giới
                   Thiệu</a> </li>
-              <li class="nav-item"> <a class="nav-link" href="#">Cửa
-                  Hàng</a> </li>
+              <li class="nav-item"> <a class="nav-link" href="#">Cửa Hàng</a> </li>
               <li class="nav-item"> <a class="nav-link" href="contact.html">Liên
                   Hệ</a> </li>
               <li class="nav-item"> <a class="nav-link" href="#">Blog</a> </li>
@@ -322,7 +321,7 @@
           <li style="text-align: left;"><a href="huong-dan-su-dung-bep-nuong-am-ban.html">Hướng
               dẫn sử dụng bếp nướng âm bàn<br>
             </a></li>
-          <li style="text-align: left;"><a href="loi-thuong-gap-khi-su-dung-bep-nuong-am-ban">Lỗi
+          <li style="text-align: left;"><a href="loi-thuong-gap-khi-su-dung-bep-nuong-am-ban.html">Lỗi
               thường gặp khi sử dụng bếp nướng âm bàn<br>
             </a></li>
           <li style="text-align: left;"><a href="cach-ve-sinh-va-bao-quan-bep-nuong-am-ban.html">Cách
