--- a/bep-nuong-am-ban/huong-dan-su-dung-bep-nuong-am-ban.html
+++ b/bep-nuong-am-ban/huong-dan-su-dung-bep-nuong-am-ban.html
@@ -19,22 +19,28 @@
   </head>
   <body>
     <!-- Start Top Nav -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-light d-none d-lg-block"
+    <nav class="navbar navbar-expand-lg bg-dark navbar-light d-none d-lg-block"
+
       id="templatemo_nav_top">
       <div class="container text-light">
         <div class="w-100 d-flex justify-content-between">
-          <div> <i class="fa fa-envelope mx-2"></i> <a class="navbar-sm-brand text-light text-decoration-none"
+          <div> <i class="fa fa-envelope mx-2"></i> <a class="navbar-sm-brand text-light text-decoration-none"
+
               href="mailto:vinutand@gmail.com">vinutand@gmail.com</a> <i class="fa fa-phone mx-2"></i>
             <a class="navbar-sm-brand text-light text-decoration-none" href="tel:010-020-0340">0973700032</a>
           </div>
-          <div> <a class="text-light" href="https://www.facebook.com/Vinuta.net"
+          <div> <a class="text-light" href="https://www.facebook.com/Vinuta.net"
+
               target="_blank" rel="nofollow"><i class="fab fa-facebook-f fa-sm fa-fw me-2"></i></a>
-            <a class="text-light" href="https://www.instagram.com/vinutand/" target="_blank"
+            <a class="text-light" href="https://www.instagram.com/vinutand/" target="_blank"
+
               rel="nofollow"><i class="fab fa-instagram fa-sm fa-fw me-2"></i></a>
             <a class="text-light" href="#" target="_blank" rel="nofollow"><i class="fab fa-twitter fa-sm fa-fw me-2"></i></a>
-            <a class="text-light" href="https://www.youtube.com/channel/UCg1RVr_wht_7Rbf2uhB6Zxw"
+            <a class="text-light" href="https://www.youtube.com/channel/UCg1RVr_wht_7Rbf2uhB6Zxw"
+
               target="_blank" rel="nofollow"><i class="fab fa-youtube fa-sm fa-fw me-2"></i></a>
-            <a class="text-light" href="https://vn.linkedin.com/in/vinuta-nd-0879a01a8"
+            <a class="text-light" href="https://vn.linkedin.com/in/vinuta-nd-0879a01a8"
+
               target="_blank" rel="nofollow"><i class="fab fa-linkedin fa-sm fa-fw"></i></a>
           </div>
         </div>
@@ -44,13 +50,18 @@
     <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light shadow">
       <div class="container d-flex justify-content-between align-items-center">
-        <a class="navbar-brand text-success logo h1 align-self-center" href="index.html"><img
-            alt="Logo" src="assets/img/vinuta-logo.jpg" width="75px"></a> <button
-          class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
-          data-bs-target="#templatemo_main_nav" aria-controls="navbarSupportedContent"
+        <a class="navbar-brand text-success logo h1 align-self-center" href="index.html"><img
+
+            alt="Logo" src="assets/img/vinuta-logo.jpg" width="75px"></a> <button
+
+          class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
+
+          data-bs-target="#templatemo_main_nav" aria-controls="navbarSupportedContent"
+
           aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between"
+        <div class="align-self-center collapse navbar-collapse flex-fill  d-lg-flex justify-content-lg-between"
+
           id="templatemo_main_nav">
           <div class="flex-fill">
             <!-- Nhớ thay nội dung header -->
@@ -67,16 +78,19 @@
           </div>
           <div class="navbar align-self-center d-flex">
             <div class="d-lg-none flex-sm-fill mt-3 mb-4 col-7 col-sm-auto pr-3">
-              <div class="input-group"> <input class="form-control" id="inputMobileSearch"
+              <div class="input-group"> <input class="form-control" id="inputMobileSearch"
+
                   placeholder="Search ..." type="text">
                 <div class="input-group-text"> <i class="fa fa-fw fa-search"></i>
                 </div>
               </div>
             </div>
-            <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal"
+            <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal"
+
               data-bs-target="#templatemo_search"> <i class="fa fa-fw fa-search text-dark mr-2"></i>
             </a> <a class="nav-icon position-relative text-decoration-none" href="#">
-              <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i> <span
+              <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i> <span
+
                 class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">2</span>
             </a> <a class="nav-icon position-relative text-decoration-none" href="#">
               <i class="fa fa-fw fa-user text-dark mr-3"></i> <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+5</span>
@@ -86,14 +100,18 @@
     </nav>
     <!-- Close Header -->
     <!-- Modal -->
-    <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog"
+    <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog"
+
       aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-lg" role="document">
-        <div class="w-100 pt-1 mb-5 text-right"> <button type="button" class="btn-close"
+        <div class="w-100 pt-1 mb-5 text-right"> <button type="button" class="btn-close"
+
             data-bs-dismiss="modal" aria-label="Close"></button> </div>
         <form action="" method="get" class="modal-content modal-body border-0 p-0">
-          <div class="input-group mb-2"> <input class="form-control" id="inputModalSearch"
-              name="q" placeholder="Search ..." type="text"> <button type="submit"
+          <div class="input-group mb-2"> <input class="form-control" id="inputModalSearch"
+
+              name="q" placeholder="Search ..." type="text"> <button type="submit"
+
               class="input-group-text bg-success text-light"> <i class="fa fa-fw fa-search text-white"></i>
             </button> </div>
         </form>
@@ -108,7 +126,8 @@
               <div>Vinuta &nbsp;&nbsp;&nbsp; <i class="fa fa-calendar"></i>
                 30/06/2024 13:00 &nbsp;&nbsp;&nbsp; <i class="fa fa-eye"></i> 5
               </div>
-              <div class="mx-auto col-md-8 col-lg-6 order-lg-last"> <img class="img-fluid"
+              <div class="mx-auto col-md-8 col-lg-6 order-lg-last"> <img class="img-fluid"
+
                   src="assets/img/huong-dan-su-dung-bep-nuong-am-ban.jpg" alt="hướng dẫn sử dụng bếp nướng âm bàn đúng kỹ thuật">
               </div>
               <div class="col-lg-6 mb-0 d-flex align-items-center">
@@ -157,9 +176,12 @@
               và ướp gia vị theo sở thích.</li>
           </ul>
           <div>
-            <center><iframe src="https://www.youtube.com/embed/vjj9yhhSf_s?si=Hwr3gqX5jBonuKaU"
-                title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""
+            <center><iframe src="https://www.youtube.com/embed/vjj9yhhSf_s?si=Hwr3gqX5jBonuKaU"
+
+                title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""
+
                 height="450" frameborder="0" width="800"></iframe></center>
           </div>
           <h3 class="h4">2. Nhóm bếp nướng</h3>
@@ -185,7 +207,8 @@
           <h3 class="h4">3. Điều chỉnh nhiệt độ</h3>
           <p>Nhiệt độ nướng phù hợp sẽ giúp món ăn chín đều và thơm ngon. Bạn có
             thể tham khảo bảng sau:</p>
-          <table style="width: 402px; text-align: left; margin-left: auto; margin-right: auto;"
+          <table style="width: 402px; text-align: left; margin-left: auto; margin-right: auto;"
+
             border="0">
             <tbody>
               <tr>
@@ -254,7 +277,8 @@
       <h3 class="h4">3. Kiểm soát nhiệt độ và thời gian nướng</h3>
       <p>Mỗi loại thực phẩm cần nhiệt độ và thời gian nướng khác nhau để đạt độ
         chín hoàn hảo. Bạn có thể tham khảo bảng sau:</p>
-      <table style="width: 502px; text-align: left; margin-left: auto; margin-right: auto;"
+      <table style="width: 502px; text-align: left; margin-left: auto; margin-right: auto;"
+
         border="0">
         <tbody>
           <tr>
@@ -385,7 +409,7 @@
           <li style="text-align: left;"><a href="huong-dan-su-dung-bep-nuong-am-ban.html">Hướng
               dẫn sử dụng bếp nướng âm bàn<br>
             </a></li>
-          <li style="text-align: left;"><a href="loi-thuong-gap-khi-su-dung-bep-nuong-am-ban">Lỗi
+          <li style="text-align: left;"><a href="loi-thuong-gap-khi-su-dung-bep-nuong-am-ban.html">Lỗi
               thường gặp khi sử dụng bếp nướng âm bàn<br>
             </a></li>
           <li style="text-align: left;"><a href="cach-ve-sinh-va-bao-quan-bep-nuong-am-ban.html">Cách
@@ -434,9 +458,11 @@
               <li> <i class="fas fa-map-marker-alt fa-fw"></i> Số nhà 255/22
                 đường Quốc Lộ 13 Cũ - KP1 - Hiệp Bình Phước - Tp Thủ Đức - Tp
                 HCM</li>
-              <li> <i class="fa fa-phone fa-fw"></i> <a class="text-decoration-none"
+              <li> <i class="fa fa-phone fa-fw"></i> <a class="text-decoration-none"
+
                   href="tel:010-020-0340">0973.700.032</a> </li>
-              <li> <i class="fa fa-envelope fa-fw"></i> <a class="text-decoration-none"
+              <li> <i class="fa fa-envelope fa-fw"></i> <a class="text-decoration-none"
+
                   href="mailto:vinutand@gmail.com">vinutand@gmail.com</a> </li>
             </ul>
           </div>
@@ -494,7 +520,8 @@
           </div>
           <div class="col-auto"> <label class="sr-only" for="subscribeEmail">Email
               Address</label>
-            <div class="input-group mb-2"> <input class="form-control bg-dark border-light"
+            <div class="input-group mb-2"> <input class="form-control bg-dark border-light"
+
                 id="subscribeEmail" placeholder="Email address" type="text">
               <div class="input-group-text btn-success text-light">Đăng Ký</div>
             </div>
